<?xml version="1.0"?>
<package>
    <name>wf_simulator_f</name>
    <version>1.8.0</version>
    <description>The wf_simulator_f package</description>
    <maintainer email="h_ohta@ertl.jp">h_ohta</maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>nav_msgs</run_depend>

    <export>
    </export>
</package>
