<?xml version="1.0"?>
<package>
  <name>astar_planner_f</name>
  <version>1.8.0</version>
  <description>The astar_planner package</description>

  <maintainer email="antm678@ertl.jp">ando</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>waypoint_follower_f</build_depend>
  <build_depend>autoware_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>waypoint_follower_f</run_depend>
  <run_depend>autoware_msgs</run_depend>

  <export>

  </export>
</package>
